--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,12 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checout@v3
+        uses: actions/checkout@v3
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cashe: 'npm'
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - name: Build
@@ -44,7 +44,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
+          # Upload dist repository
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
