--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
         "plugins": [{
             "name": "typescript-svelte-plugin"
         }]
-	}
+	},
+	"include": ["../src/**/*.js", "../src/**/*.ts", "../src/**/*.svelte", "../src/**/*.svx"],
+  	"exclude": ["../node_modules/**", "./**"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
