--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true,
-        "plugins": [{
-            "name": "typescript-svelte-plugin"
-        }]
-	},
-	"include": ["../src/**/*.js", "../src/**/*.ts", "../src/**/*.svelte", "../src/**/*.svx"],
-  	"exclude": ["../node_modules/**", "./**"]
+		"strict": true
+	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
