--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.11.0",
+		"@types/better-sqlite3": "^7.6.3",
 		"mdsvex": "^0.10.6",
 		"sass": "^1.59.2",
 		"svelte": "^3.54.0",
@@ -23,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"better-sqlite3": "^8.2.0",
 		"normalize.css": "^8.0.1"
 	}
 }
